--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,4 +1,7 @@
-name: Frontend Continuous Integration
+# https://github.com/marketplace/actions/checkout
+# https://github.com/marketplace/actions/checkout-node-project
+
+name: 👨‍💻🔄Frontend Continuous Integration 
 
 on:
   workflow_dispatch:
@@ -8,45 +11,46 @@ on:
 
 jobs:
   Linting:
-    runs-on: ubuntu-latest
-    environment: Devlopmnet Environment
+    runs-on: ubuntu-latest 
+    environment: Development Environment
 
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
-
-    - name: Use Node.js 18
-      uses: actions/setup-node@v3
+    - name: 📂Checkout branch 
+      uses: actions/checkout@v4
+    
+    - name: 🚀Install Node.js 
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 18.x
         cache: 'npm'
         cache-dependency-path: starter/frontend/package-lock.json
 
-    - name: Install Dependencies
+    - name: 📦Install Dependencies
       working-directory: starter/frontend
       run: npm ci
 
-    - name: Checkout Run Lint
+    - name: 🔍Run Lint
       run: cd starter/frontend && npm run lint
 
   Test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
+    - name: 📂Checkout branch
+      uses: actions/checkout@v4
 
-    - name: Use Node.js 18
-      uses: actions/setup-node@v3
+    - name: 🚀Install Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 18.x
         cache: 'npm'
         cache-dependency-path: starter/frontend/package-lock.json
-    - name: Install Dependencies
+        
+    - name: 📦Install Dependencies
       working-directory: starter/frontend
       run: npm ci
   
-    - name: Test
+    - name: 🧪Run Test
       run: cd starter/frontend && npm run test
       
   Build:
@@ -54,17 +58,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
+    - name: 📂Checkout branch
+      uses: actions/checkout@v4
     
-    - name: Use Node.js 18
-      uses: actions/setup-node@v3
+    - name: 🚀Install Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 18.x
         cache: 'npm'
         cache-dependency-path: starter/frontend/package-lock.json
 
-    - name: Build and Run Docker Image
+    - name: 🐳Build and Run Docker Image
       run: |
         cd starter/frontend
         docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
