--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,4 +1,4 @@
-name: Backend Continuous Deployment
+name: 🔄☁️Backend Continuous Deployment
 
 on:
   workflow_dispatch:
@@ -9,48 +9,49 @@ on:
 jobs:
   Linting:
     runs-on: ubuntu-latest
-    environment: Devlopmnet Environment
+    environment: Development Environment
 
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
+    - name: 📂Checkout branch 
+      uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - name: 🐍Setup Python
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
 
-    - name: Install Rependencies
+    - name: 📦Install Dependencies
       working-directory: starter/backend 
       run:  |
         python -m pip install --upgrade pip
         pip install pipenv
         pip install flake8
 
-    - name: Checkout Run Lint
+    - name: 🔍Run Lint
       run: cd starter/backend && pipenv run lint
 
   Test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
+    - name: 📂Checkout branch 
+      uses: actions/checkout@v4
 
-    - name: Use Python 3
-      uses:  actions/setup-python@v4
+    - name: 🐍Setup Python
+      uses:  actions/setup-python@v5
       with:
         python-version: "3.10"
 
-    - name: Install Dependencies
+    - name: 📦Install Dependencies
       working-directory: starter/backend 
       run:  |
         python -m pip install --upgrade pip
         pip install pipenv
         pip install flake8
+        pipenv install pytest
 
-    - name: Test
-      run: cd starter/backend && pipenv install pytest && pipenv run test
+    - name: 🧪Run Test
+      run: cd starter/backend && pipenv run test
 
       
   Build:
@@ -58,41 +59,42 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Check the Repository
-      uses: actions/checkout@v3
+    - name: 📂Checkout branch 
+      uses: actions/checkout@v4
 
 
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
+    - name: 🔑Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
         aws-region: us-east-1
         
-    - name: Login to Amazon
+    - name: 🔓Login to Amazon 
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Build and Push Docker Image
+    - name: 🐳☁️Build and Push Docker Image
       working-directory: starter/backend
       env:
         IMAGE_TAG: latest
         REPO_NAME: backend
       run: |
-        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag 669172573612.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
-        docker push 669172573612.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag 058264144724.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
+        docker push 058264144724.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+
     - name: Update Kubeconfig
       run:
-       aws eks update-kubeconfig --name udacity-project4 --region us-east-1
+        aws eks update-kubeconfig --name udacity-project4 --region us-east-1
 
-    - name: Deploy Docker Image to Amazon EKS
+    - name: 🐳☁️Deploy Docker Image to Amazon EKS 🚀
       working-directory: starter/backend/k8s
       env:
         IMAGE_TAG: latest
         REPO_NAME: backend
       run: |
         aws eks update-kubeconfig --name udacity-project4 --region us-east-1
-        kustomize edit set image backend=669172573612.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+        kustomize edit set image backend=058264144724.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
         kustomize build | kubectl apply -f -
