--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -10,7 +10,8 @@ env:
   IMAGE_TAG: latest
   REPO_NAME: backend
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-
+  EKS_CLUSTER : udacity-project4
+  AWS_REGION: us-east-1
   
 jobs:
   Linting:
@@ -85,16 +86,16 @@ jobs:
     - name: 🐳☁️Build and Push Docker Image
       working-directory: starter/backend
       run: |
-        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
-        docker push ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
+        docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/$REPO_NAME:$IMAGE_TAG
 
     - name: Update Kubeconfig
       run:
-        aws eks update-kubeconfig --name udacity-project4 --region us-east-1
+        aws eks update-kubeconfig --name ${EKS_CLUSTER} --region ${AWS_REGION}
 
     - name: 🐳☁️Deploy Docker Image to Amazon EKS 🚀
       working-directory: starter/backend/k8s
       run: |
-        aws eks update-kubeconfig --name udacity-project4 --region us-east-1
-        kustomize edit set image backend=${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
+        aws eks update-kubeconfig --name ${EKS_CLUSTER} --region ${AWS_REGION}
+        kustomize edit set image backend=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/$REPO_NAME:$IMAGE_TAG
         kustomize build | kubectl apply -f -
