--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_TAG: latest
   REPO_NAME: frontend
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-  EKS_CLUSTER : udacity-project4
+  EKS_CLUSTER : cluster
   AWS_REGION: us-east-1
 
 
