--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -25,7 +25,7 @@ jobs:
     - name: 🐍Setup Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: 📦Install Dependencies
       working-directory: starter/backend 
@@ -47,7 +47,7 @@ jobs:
     - name: 🐍Setup Python
       uses:  actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: 📦Install Dependencies
       working-directory: starter/backend 
