--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: 🐍Setup Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: 📦Install Dependencies
       working-directory: starter/backend 
@@ -40,7 +40,7 @@ jobs:
     - name: 🐍Setup Python
       uses:  actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: 📦Install Dependencies
       working-directory: starter/backend 
