--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -8,68 +8,62 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'starter/frontend/**' # Trigger only if files in the frontend directory changes
 
 jobs:
-  Linting:
-    runs-on: ubuntu-latest 
-    environment: Development Environment
-
-    steps:
-    - name: 📂Checkout branch 
-      uses: actions/checkout@v4
-    
-    - name: 🚀Install Node.js 
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18.x
-        cache: 'npm'
-        cache-dependency-path: starter/frontend/package-lock.json
-
-    - name: 📦Install Dependencies
-      working-directory: starter/frontend
-      run: npm ci
-
-    - name: 🔍Run Lint
-      run: cd starter/frontend && npm run lint
-
-  Test:
+  Setup:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📂Checkout branch
-      uses: actions/checkout@v4
-
-    - name: 🚀Install Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18.x
-        cache: 'npm'
-        cache-dependency-path: starter/frontend/package-lock.json
-        
-    - name: 📦Install Dependencies
-      working-directory: starter/frontend
-      run: npm ci
-  
-    - name: 🧪Run Test
-      run: cd starter/frontend && npm run test
+      - name: 📂 Checkout Repository
+        uses: actions/checkout@v4
       
-  Build:
-    needs: [Linting, Test]
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: 📂Checkout branch
-      uses: actions/checkout@v4
-    
-    - name: 🚀Install Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18.x
-        cache: 'npm'
-        cache-dependency-path: starter/frontend/package-lock.json
+      - name: 🚀 Install Node.js and Dependencies
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: 'npm'
+          cache-dependency-path: starter/frontend/package-lock.json
 
-    - name: 🐳Build and Run Docker Image
-      run: |
-        cd starter/frontend
-        docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
-        docker run --name mp-frontend -p 3000:3000 -d mp-frontend
+      - name: 📦 Install Project Dependencies
+        working-directory: starter/frontend
+        run: npm ci
+
+  Linting:
+    runs-on: ubuntu-latest
+    needs: Setup  # Ensures that the setup job completes first
+
+    steps:
+      - name: 🔍 Run Lint
+        run: npm run lint --prefix starter/frontend
+
+  UnitTests:
+    runs-on: ubuntu-latest
+    needs: Setup  # Ensures that the setup job completes first
+
+    steps:
+      - name: 🧪 Run Tests
+        run: npm test --prefix starter/frontend
+
+  Build:
+    runs-on: ubuntu-latest
+    needs: [Linting, UnitTests]  # Runs only after lint and test jobs succeed
+
+    steps:
+      - name: 📂 Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🐳 Build and Cache Docker Image
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache  # Cache path for Docker layers
+          key: ${{ runner.os }}-docker-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
+      - name: 🐳 Build and Run Docker Image
+        run: |
+          cd starter/frontend
+          docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
+          docker run --name mp-frontend -p 3000:3000 -d mp-frontend
