--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,68 +1,61 @@
-name: 🔧🔄Backend Continuous Integration
+# GitHub Actions for Backend Continuous Integration
+
+name: 🔧🔄 Backend Continuous Integration
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual triggering of the workflow
   pull_request:
     branches:
-      - master
+      - master  # Trigger on pull requests to the master branch
+    paths:
+      - 'starter/frontend/**'  # Trigger only if files in the frontend directory change
 
 jobs:
-  Linting:
+  Setup:
     runs-on: ubuntu-latest
     environment: Development Environment
 
     steps:
-    - name: 📂Checkout branch 
-      uses: actions/checkout@v4
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
 
-    - name: 🐍Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.10
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.10
 
-    - name: 📦Install Dependencies
-      working-directory: starter/backend 
-      run:  |
-        python -m pip install --upgrade pip
-        pip install pipenv
-        pip install flake8
+      - name: 📦 Install Dependencies
+        working-directory: starter/backend 
+        run:  |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install flake8 pytest 
 
-    - name: 🔍Run Lint
-      run: cd starter/backend && pipenv run lint
+  Linting:
+    runs-on: ubuntu-latest
+    needs: Setup  # Ensure setup job completes first
+
+    steps:
+      - name: 🔍 Run Lint
+        run: cd starter/backend && pipenv run flake8 .  
 
   Test:
     runs-on: ubuntu-latest
+    needs: Setup  # Ensure setup job completes first
 
     steps:
-    - name: 📂Checkout branch 
-      uses: actions/checkout@v4
+      - name: 🧪 Run Tests
+        run: cd starter/backend && pipenv run pytest 
 
-    - name: 🐍Setup Python
-      uses:  actions/setup-python@v5
-      with:
-        python-version: 3.10
-
-    - name: 📦Install Dependencies
-      working-directory: starter/backend 
-      run:  |
-        python -m pip install --upgrade pip
-        pip install pipenv
-        pip install flake8
-        pipenv install pytest
-
-    - name: 🧪Run Test
-      run: cd starter/backend && pipenv run test
-
-      
   Build:
-    needs: [Linting, Test]
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: 📂Checkout branch 
-      uses: actions/checkout@v4
+    needs: [Linting, Test]  # Runs only after linting and testing succeed
 
-    - name: 🐳Build Docker Image
-      run: |
-        cd starter/backend
-        docker build --tag mp-backend:latest .
+    steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
+      - name: 🐳 Build Docker Image
+        run: |
+          cd starter/backend
+          docker build --tag mp-backend:latest .
