--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -37,7 +37,13 @@ jobs:
 
     steps:
       - name: 🔍 Run Lint
-        run: cd starter/backend && pipenv run flake8 .  
+        run: |
+          if [ -d starter/backend ]; then
+            cd starter/backend && pipenv run flake8 .
+          else
+            echo "Directory starter/backend does not exist."
+            exit 1
+          fi  
 
   Test:
     runs-on: ubuntu-latest
@@ -45,8 +51,14 @@ jobs:
 
     steps:
       - name: 🧪 Run Tests
-        run: cd starter/backend && pipenv run pytest 
-
+        run: |
+          if [ -d starter/backend ]; then
+            cd starter/backend && pipenv run pytest 
+          else
+            echo "Directory starter/backend does not exist."
+            exit 1
+          fi 
+          
   Build:
     runs-on: ubuntu-latest
     needs: [Linting, Test]  # Runs only after linting and testing succeed
@@ -57,5 +69,10 @@ jobs:
 
       - name: 🐳 Build Docker Image
         run: |
-          cd starter/backend
-          docker build --tag mp-backend:latest .
+          if [ -d starter/backend ]; then
+            cd starter/backend
+            docker build --tag mp-backend:${{ github.sha }} .
+          else
+            echo "Directory starter/backend does not exist."
+            exit 1
+          fi
