--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - master  # Trigger on pull requests to the master branch
     paths:
-      - 'starter/frontend/**'  # Trigger only if files in the frontend directory change
+      - 'starter/backend/**'  # Trigger only if files in the frontend directory change
 
 jobs:
   Setup:
@@ -22,7 +22,7 @@ jobs:
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: 3.10
 
       - name: 📦 Install Dependencies
         working-directory: starter/backend 
@@ -36,29 +36,47 @@ jobs:
     needs: Setup  # Ensure setup job completes first
 
     steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.10
+       
+      - name: Install Dependencies
+        working-directory: starter/backend 
+        run:  |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pip install flake8
+
       - name: 🔍 Run Lint
-        run: |
-          if [ -d starter/backend ]; then
-            cd starter/backend && pipenv run flake8 .
-          else
-            echo "Directory starter/backend does not exist."
-            exit 1
-          fi  
+        run: cd starter/backend && pipenv run flake8 .  
 
   Test:
     runs-on: ubuntu-latest
     needs: Setup  # Ensure setup job completes first
 
     steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        working-directory: starter/backend 
+        run:  |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pip install flake8
+
       - name: 🧪 Run Tests
-        run: |
-          if [ -d starter/backend ]; then
-            cd starter/backend && pipenv run pytest 
-          else
-            echo "Directory starter/backend does not exist."
-            exit 1
-          fi 
-          
+        run: cd starter/backend && pipenv run pytest 
+
   Build:
     runs-on: ubuntu-latest
     needs: [Linting, Test]  # Runs only after linting and testing succeed
@@ -69,10 +87,5 @@ jobs:
 
       - name: 🐳 Build Docker Image
         run: |
-          if [ -d starter/backend ]; then
-            cd starter/backend
-            docker build --tag mp-backend:${{ github.sha }} .
-          else
-            echo "Directory starter/backend does not exist."
-            exit 1
-          fi
+          cd starter/backend
+          docker build --tag mp-backend:latest .
