fixed pytest could not be found within PATH

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -75,7 +75,7 @@ jobs:
           pip install flake8
 
       - name: 🧪 Run Tests
-        run: cd starter/backend && pipenv run pytest 
+        run: pipenv run pytest 
 
   Build:
     runs-on: ubuntu-latest
