--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -35,13 +35,29 @@ jobs:
         run:  |
           python -m pip install --upgrade pip
           pip install pipenv
-          pipenv install flake8 pytest  # Install both flake8 and pytest
+          pipenv install flake8 pytest
 
   Linting:
     runs-on: ubuntu-latest
     needs: Setup  # Ensure setup job completes first
 
     steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+       
+      - name: Install Dependencies
+        working-directory: starter/backend 
+        run:  |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pip install flake8
+          pipenv install flake8
+
       - name: 🔍 Run Lint
         run: cd starter/backend && pipenv run flake8 .  
 
@@ -50,6 +66,22 @@ jobs:
     needs: Setup  # Ensure setup job completes first
 
     steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        working-directory: starter/backend 
+        run:  |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pip install flake8
+          pipenv install pytest
+
       - name: 🧪 Run Tests
         run: cd starter/backend && pipenv run pytest  
 
