--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -84,11 +84,14 @@ jobs:
       - name: 🧪 Run Tests
         run: cd starter/backend && pipenv run pytest  
 
-  Build:
+  Build_Deploy:
     runs-on: ubuntu-latest
     needs: [Linting, Test]  # Runs only after linting and testing succeed
 
     steps:
+      - name: 📂 Checkout branch 
+        uses: actions/checkout@v4
+
       - name: 🔑 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -107,11 +110,6 @@ jobs:
           docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${GIT_SHA} .
           docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${GIT_SHA}
 
-  Deploy:
-    runs-on: ubuntu-latest
-    needs: Build  # Runs only after Build job succeeds
-
-    steps:
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${EKS_CLUSTER} --region ${AWS_REGION}
 
